--- a/day-4-new-card/days-folder/day1.html
+++ b/day-4-new-card/days-folder/day1.html
@@ -13,13 +13,13 @@
         <div class="card-container">
             <h2>Day 1 </h2>
             <div class="screenshot">
-                <img src="/images/day1.jpg" alt="day 1 practice review">
+                <img src="../images/day1.jpg" alt="day 1 practice review">
                 <p class="title">
                    <b>Practicing gradient colors and buttons</b>
                 </p>
             </div>
             <div class="links">
-                <p><a href="#" target="_blank">Go to url website</a></p>
+                <p><a href="https://cyberdiego33.github.io/day1-soloLearning/" target="_blank">Go to url website</a></p>
                 <p><a href="https://github.com/cyberdiego33/solo-learning/tree/main/day1-gradient-practice" target="_blank">View code in github</a></p>
                 <p><a href="https://www.linkedin.com/posts/goodluck-iwuji-260993346_day-sololearning-activity-7291872914700681216-kZ8f?utm_source=share&utm_medium=member_android&rcm=ACoAAFakeqgBXGrpgB75gVbFCKFAVsRRDoAidms" target="_blank">Go to linkedln post</a></p>
             </div>
@@ -39,7 +39,7 @@
                     Practiced on the syntax of creating gradients and also using the background shorthand properties to create multiple gradients on the same background <br>
                     It is my first day so I am very motivated and I would give my practice perfomance for today <b>8 / 10</b>
                 </p>
-                <div class="summary"><a href="/index.html">back to card</a></div>
+                <div class="summary"><a href="../index.html">back to card</a></div>
                
             </div>
         </div>
